# vanguard-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/.mypy_cache/3.11/: cache.0.db-shm  cache.0.db-wal  cache.1.db-shm  cache.1.db-wal  cache.10.db-shm  cache.10.db-wal  cache.11.db-shm  cache.11.db-wal  cache.12.db-shm  cache.12.db-wal  cache.13.db-shm  cache.13.db-wal  cache.14.db-shm  cache.14.db-wal  cache.15.db-shm  cache.15.db-wal  cache.2.db-shm  cache.2.db-wal  cache.3.db-shm  cache.3.db-wal  cache.4.db-shm  cache.4.db-wal  cache.5.db-shm  cache.5.db-wal  cache.6.db-shm  cache.6.db-wal  cache.7.db-shm  cache.7.db-wal  cache.8.db-shm  cache.8.db-wal  cache.9.db-shm  cache.9.db-wal
backend/app/: __init__.py  config.py  deps.py  exceptions.py  main.py  rate_limit.py
backend/app/models/: schemas.py
backend/app/repository/: base.py  firestore.py  memory.py  sqlite.py
backend/app/routes/: calculate.py  chat.py  entries.py  health.py  insights.py  stream.py
backend/app/services/: cache.py  gemini.py  simulator.py
backend/tests/: conftest.py  test_calculate.py  test_chat.py  test_config.py  test_deps.py  test_entries.py  test_error_paths.py  test_gemini_service.py  test_health.py  test_insights.py  test_main_security.py  test_memory_repository.py  test_models.py  test_rate_limit.py  test_simulator.py  test_stream.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+62 files in other folders)
