[project]
name = "vanguard-copilot-backend"
version = "1.0.0"
description = "Vanguard Co-Pilot - GenAI stadium operations assistant for FIFA World Cup 2026"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "slowapi>=0.1.9",
    "google-genai>=1.7.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.21.0",
    "google-cloud-firestore>=2.20.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=90"

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["tests/*", "**/__init__.py", "**/repository/firestore.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 90
